compiler/kernc_cli/tests/soundness/run-pass/pattern/user_pattern_void_bind.kn
// class: pattern-protocol
// exit: 0

struct Is {
    expected: i32,
};

impl Is : Pattern[i32] {
    type Bind = void;

    fn apply(value: i32) ?Bind {
        if (value == self.expected) {
            return .{ Some: {} };
        }
        return .None;
    }
}

fn main() i32 {
    let value = 7;
    let seven = Is.{ expected: 7 };
    return match (value) {
        seven => 0,
        _ => 1,
    };
}
